<resources>
    <!--server response codes-->
    <string name="https_400_error">Bad Request</string>
    <string name="http_401_error">Unauthorized access</string>
    <string name="http_403_error">Forbidden or denied access</string>
    <string name="http_404_error">Resource Not Found</string>
    <string name="http_402_error">Payment Required</string>
    <string name="http_405_error">Method Not Allowed</string>
    <string name="http_406_error">Not Acceptable</string>
    <string name="http_408_error">Request Time out</string>
    <string name="http_409_error">conflict in the request</string>
    <string name="http_500_error">Internal Server Error</string>
    <string name="http_501_error">Not Implemented</string>
    <string name="http_503_error">Service Unavailable</string>
    <string name="http_522_error">Connection Timed Out</string>
    <string name="http_520_error">Unknown Error</string>
    <string name="http_526_error">Invalid SSL Certificate</string>
    <string name="http_599_error">Network connect timeout error</string>
    <string name="http_some_other_error">Some error occurred! Please try again later.</string>

    <!--Dialog-->
    <string name="on_location_instruction">Please go to app settings and enable permissions</string>
    <string name="dialog_alert_heading">Alert</string>
    <string name="validation_internet_connection">Please check internet connection</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login_text">Login</string>
    <string name="unauthorized_access">Your session has expired.</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="logout">Logout</string>
    <string name="want_to_logout">Are you sure you want to logout?</string>
    <string name="error">Error</string>
    <string name="try_again">Try again</string>
    <string name="alert_txt">Alert</string>
    <string name="allow_permission_setting">Go to Settings and Grant the permission to use feature inside the application.</string>
    <string name="allow_permission">Please allow permission</string>
    <string name="want_to_exit">Are you sure you want to exit?</string>
    <string name="enable_location">Enable Location</string>
    <string name="allow_location_permission_setting">You need to allow your device location in order to use and explore Awkwards Dating app</string>
    <string name="no_internet_found">No Internet Found</string>
    <string name="check_internet_connection">Please check your internet connection and try again letter</string>

    <!--Other Text -->
    <string name="loading">Loading…</string>
    <string name="validation_internet_try_again">Please check your internet connection \nand try again</string>
    <string name="image_length">Image should not be grater than 5 Mb</string>
    <string name="no_search_user_found">No Such User Found</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>


    <!--Login Screen-->
    <string name="welcome">Welcome</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>


    <!--Validation-->
    <string name="please_enter_mobile_number">Please enter mobile number.</string>
    <string name="mobile_number_length">Mobile number should be 6–13 digit.</string>
    <string name="please_enter_password">Please enter password.</string>
    <string name="please_enter_email">Please enter email address.</string>
    <string name="enter_correct_email">Please enter a valid email address.</string>
    <string name="password_length">Password must contain minimum 8 and maximum 25 characters.</string>
    <string name="something_went_wrong">Something went wrong, Please try again.</string>
    <string name="please_enter_otp">Please enter otp.</string>
    <string name="otp_length">Otp should be 4 digit long.</string>
    <string name="confirm_password_not_match">Password and confirm password should be same.</string>
    <string name="please_enter_confirm_password">Please enter confirm password.</string>
    <string name="validate_password">Password must contain at least one upper case letter,one lower case letter, one digit and one special character.</string>

    <!--Sign Up-->
    <string name="first_name_req">First name*</string>
    <string name="last_name_req">Last name*</string>
    <string name="mobile_number_req">Mobile Number*</string>
    <string name="email_address_req">Email Address*</string>
    <string name="password_req">Password*</string>
    <string name="confirm_password_req">Confirm password*</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="congratulations">Congratulations</string>
    <string name="success_register_msg">You have successfully registered with us..!</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="create_account">Create Account</string>

    <!--SignUp Validation-->
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="special_char_not_allowed">Please enter a valid name, special characters and numbers are not allowed</string>
    <string name="please_enter_current_password">Please enter current password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="fname_length">First name should contain at least 2 character</string>
    <string name="lname_length">Last name should contain at least 2 character</string>

    <!--Navigation Screen-->
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="message">Message</string>
    <string name="profile">Profile</string>
    <string name="activity">Activity</string>

    <!--Change Password Screen-->
    <string name="change_password">Change Password</string>
    <string name="please_set_your_new_password_here">Please set your new password here.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="result">Result</string>
    <string name="save_password">Save Password</string>

    <!--Account Screen-->
    <string name="notifications">Notifications</string>
    <string name="setting">Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="help_support">FAQ and Support</string>
    <string name="rate_the_app">Rate the App</string>
    <string name="privacy_policy">Privacy Policy</string>


</resources>