<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:fontFamily="@font/app_font_bold"
        android:gravity="center"
        android:text="@string/no_internet_found"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size18" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginEnd="@dimen/dp_15"
        android:fontFamily="@font/app_font_regular"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/dp_5"
        android:padding="@dimen/dp_10"
        android:text="@string/check_internet_connection"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_14" />

    <TextView
        android:id="@+id/tryAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@drawable/dr_app_theme_btn_bg"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/app_font_bold"
        android:gravity="center"
        android:paddingStart="@dimen/dp_20"
        android:paddingTop="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_20"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/try_again"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size14" />


</LinearLayout>
