<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    card_view:cardCornerRadius="@dimen/dp_5"
    card_view:cardElevation="@dimen/dp_4"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/app_font_bold"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/logout"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size16" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/app_font_regular"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:text="@string/want_to_logout"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@color/gray_line"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buttonNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                android:fontFamily="@font/app_font_regular"
                android:gravity="center"
                android:padding="@dimen/dp_12"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size14" />

            <View
                android:layout_width="@dimen/dp_1"
                android:layout_height="match_parent"
                android:background="@color/gray_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buttonYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/white"
                android:fontFamily="@font/app_font_regular"
                android:gravity="center"
                android:padding="@dimen/dp_12"
                android:text="@string/logout"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size14" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>
