<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="loginViewModel"
            type="com.dhenu.app.ui.login.LoginViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:background="@color/screen_bg"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:background="@drawable/dr_edittext_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_10"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dp_40">

                <ImageView
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="@dimen/dp_200"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_logo" />

                <EditText
                    android:layout_marginTop="@dimen/dp_30"
                    android:id="@+id/email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/dr_edittext_background"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/app_font_regular"
                    android:hint="User Name"
                    android:padding="@dimen/dp_20"
                    android:imeOptions="actionNext"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size16" /> <!-- Larger text size -->

                <EditText
                    android:layout_marginTop="@dimen/dp_25"
                    android:background="@drawable/dr_edittext_background"
                    android:id="@+id/password_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/app_font_regular"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="25"
                    android:padding="@dimen/dp_20"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size16" /> <!-- Larger text size -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/app_font_regular"
                    android:gravity="end"
                    android:onClick="@{()->loginViewModel.onclickForgotPassword()}"
                    android:paddingTop="@dimen/dp_30"
                    android:paddingBottom="@dimen/dp_15"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size16" /> <!-- Slightly larger text -->

                <TextView
                    android:id="@+id/loginBtnTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:background="@drawable/dr_app_theme_btn_bg"
                    android:fontFamily="@font/app_font_regular"
                    android:gravity="center"
                    android:padding="@dimen/dp_20"
                    android:text="@string/sign_in"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size16" /> <!-- Larger button text -->

            </LinearLayout>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
